crates/languages/bevy_mod_scripting_lua_derive/tests/fail/simple/invalid-output-type.stderr
error[E0308]: mismatched types
 --> tests/fail/simple/invalid-output-type.rs:8:8
  |
8 |     fn my_fn() -> usize;
  |        ^^^^^^^    ----- expected due to this
  |        |
  |        expected `usize`, found `MyStruct`
